--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@valle/generator-valle-element-js",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "A generator for valle-elements - web components with Polymer 3",
   "homepage": "https://github.com/valleweb/valle-element-js",
   "author": {
@@ -19,18 +19,18 @@
   ],
   "preferGlobal": true,
   "devDependencies": {
-    "yeoman-test": "^1.7.0",
-    "yeoman-assert": "^3.1.0",
     "coveralls": "^3.0.0",
-    "nsp": "^2.8.0",
     "eslint": "^4.19.1",
-    "prettier": "^1.11.1",
-    "husky": "^0.14.3",
-    "lint-staged": "^6.1.1",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-prettier": "^2.6.0",
     "eslint-config-xo": "^0.20.1",
-    "jest": "^22.0.6"
+    "eslint-plugin-prettier": "^2.6.0",
+    "husky": "^0.14.3",
+    "jest": "^25.1.0",
+    "lint-staged": "^6.1.1",
+    "nsp": "^2.8.0",
+    "prettier": "^1.11.1",
+    "yeoman-assert": "^3.1.0",
+    "yeoman-test": "^1.7.0"
   },
   "engines": {
     "npm": ">= 4.0.0"
